gitops/apps/cachelab/overlays/prod/middleware-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prod-basic-auth
spec:
  basicAuth:
    secret: prod-basic-auth
