gitops/apps/cachelab/overlays/prod/middleware-security.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prod-security
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: false
    stsPreload: false
    forceSTSHeader: false
    contentTypeNosniff: true
    referrerPolicy: strict-origin-when-cross-origin
    permissionsPolicy: >-
      camera=(),
      microphone=(),
      geolocation=(),
      payment=(),
      usb=()
