gitops/apps/cachelab/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cachelab
spec:
  template:
    metadata:
      labels:
        observability.cachelab.fr/environment: production
    spec:
      containers:
        - name: frontend
