gitops/apps/cachelab/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cachelab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: >-
      cachelab-prod-prod-security@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - www.cachelab.fr
      secretName: www-cachelab-fr-tls
  rules:
    - host: www.cachelab.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cachelab
                port:
                  number: 80
